ghc-4335c07/testsuite/tests/module/mod136.stderr

mod136.hs:7:5: error:
    Variable not in scope: zipWith5
    Perhaps you meant one of these:
      ‘zipWith’ (imported from Mod136_A),
      ‘zipWith3’ (imported from Mod136_A)
