ghc-4335c07/testsuite/tests/module/mod136.hs
-- !!! Re-exporting qualified module.
module M  where

import Prelude ()   -- Forces the import to come from Mod136_A
import Mod136_A

x = zipWith5

